--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Header */
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,7 +23,7 @@ header {
   border-bottom: 1px solid seashell;
 }
 
-header nav p {
+.header nav p {
   text-dectoration: underline;
   display: inline-flex;
   justify-content: space-around;
@@ -37,18 +37,24 @@ header img {
 
 /* Mission */
 
-#mission {
-  dislpay: flex;
+.mission {
+  padding-top: 69px;
+}
+
+.flex.mission {
+  display: flex;
   background-image: url("../images/img-mission-background.jpg");
   height: 700px;
   width: 1200px;
+  padding-top: 70px;
   margin: auto;
-  padding-top: 69px;
-
 }
 
-#mission .our.mission {
+.our.mission {
+  padding: 0;
   background-color: black;
+  margin: auto;
+  width: 1200px;
 }
 
 /* Tea of the Month */
@@ -92,4 +98,15 @@ header img {
   margin: 5px 20px;
   display: flex;
   padding: 10px;
+}
+
+/* Contact */
+
+.contact {
+  height: 200px;
+}
+
+footer {
+  margin-left: 20px;
+  text-align: left;
 }
